# amc

./: Makefile.am  README.md  TODO  amc.pc  amc.pc.in  config.h  configure.ac  libtool
doc/: amc.dxy
src/: Makefile.am  amc-private.h  amc.c  amc.h  amc.lo  doxy.txt  frame.c  libamc.la
src/.deps/: frame.Plo
src/.libs/: libamc-1.0.so.0  libamc-1.0.so.0.0.0  libamc.la  libamc.lai  libllt-1.0.so.0.0.0
tests/: blade-left.out  blade-right.out  frame.amc
tools/: Makefile.am  amc-parse  amc-parse.c  amc-test  amc-test.c
tools/.deps/: amc-parse.Po  amc-test.Po
